@@ -2359,13 +2359,18 @@ operator|.
 name|getEncodedNameAsBytes
 argument_list|()
 argument_list|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
 name|hrs
 operator|.
 name|getServerName
 argument_list|()
 operator|.
-name|getVersionedBytes
+name|toString
 argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
