@@ -426,6 +426,8 @@ Release 0.92.0 - Unreleased
    HBASE-4687  regionserver may miss zk-heartbeats to master when replaying
                edits at region open (prakash via jgray)
    HBASE-4701  TestMasterObserver fails up on jenkins
+   HBASE-4700  TestSplitTransactionOnCluster fails on occasion when it tries
+               to move a region
 
   TESTS
    HBASE-4450  test for number of blocks read: to serve as baseline for expected
